[gd_scene load_steps=7 format=3 uid="uid://room004"]

[ext_resource type="PackedScene" uid="uid://bnqgo4qan8npu" path="res://scenes/player/Player.tscn" id="1_player"]
[ext_resource type="Script" path="res://scenes/rooms/TestRoomHUD.gd" id="3_hud"]
[ext_resource type="Script" path="res://scenes/rooms/Room.gd" id="4_room"]
[ext_resource type="PackedScene" uid="uid://boss001" path="res://scenes/enemies/Boss.tscn" id="5_boss"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall"]
size = Vector2(960, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_v"]
size = Vector2(16, 540)

[node name="Room4" type="Node2D"]
script = ExtResource("4_room")
room_id = 4

[node name="Player" parent="." instance=ExtResource("1_player")]
position = Vector2(480, 480)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 270)

[node name="Walls" type="Node2D" parent="."]

[node name="Top" type="StaticBody2D" parent="Walls"]
position = Vector2(480, 8)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Top"]
shape = SubResource("RectangleShape2D_wall")

[node name="TopVisual" type="ColorRect" parent="Walls/Top"]
offset_left = -480.0
offset_top = -8.0
offset_right = 480.0
offset_bottom = 8.0
color = Color(0.5, 0.2, 0.2, 1)

[node name="Bottom" type="StaticBody2D" parent="Walls"]
position = Vector2(480, 532)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Bottom"]
shape = SubResource("RectangleShape2D_wall")

[node name="BottomVisual" type="ColorRect" parent="Walls/Bottom"]
offset_left = -480.0
offset_top = -8.0
offset_right = 480.0
offset_bottom = 8.0
color = Color(0.5, 0.2, 0.2, 1)

[node name="Left" type="StaticBody2D" parent="Walls"]
position = Vector2(8, 270)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
shape = SubResource("RectangleShape2D_wall_v")

[node name="LeftVisual" type="ColorRect" parent="Walls/Left"]
offset_left = -8.0
offset_top = -270.0
offset_right = 8.0
offset_bottom = 270.0
color = Color(0.5, 0.2, 0.2, 1)

[node name="Right" type="StaticBody2D" parent="Walls"]
position = Vector2(952, 270)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
shape = SubResource("RectangleShape2D_wall_v")

[node name="RightVisual" type="ColorRect" parent="Walls/Right"]
offset_left = -8.0
offset_top = -270.0
offset_right = 8.0
offset_bottom = 270.0
color = Color(0.5, 0.2, 0.2, 1)

[node name="Background" type="ColorRect" parent="."]
z_index = -1
offset_left = 16.0
offset_top = 16.0
offset_right = 944.0
offset_bottom = 524.0
color = Color(0.25, 0.1, 0.1, 1)

[node name="Boss" parent="." instance=ExtResource("5_boss")]
position = Vector2(480, 150)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_hud")

[node name="VolatilityLabel" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 30.0
text = "Volatility: 0%"

[node name="ShardsLabel" type="Label" parent="HUD"]
offset_left = 240.0
offset_top = 10.0
offset_right = 340.0
offset_bottom = 30.0
text = "Shards: 0"

[node name="HealthLabel" type="Label" parent="HUD"]
offset_left = 360.0
offset_top = 10.0
offset_right = 440.0
offset_bottom = 30.0
text = "HP: 6"

[node name="RoomLabel" type="Label" parent="HUD"]
offset_left = 460.0
offset_top = 10.0
offset_right = 600.0
offset_bottom = 30.0
text = "THE ACCUMULATOR"

[node name="Instructions" type="Label" parent="HUD"]
offset_left = 750.0
offset_top = 10.0
offset_right = 950.0
offset_bottom = 30.0
text = "WASD | Arrows | Space"
